--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Taskinator</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -11,10 +12,8 @@
 <body>
 
   <header>
-
     <h1 class="page-title">Taskinator</h1>
     <p>Click the button below to add a new task!</p>
-
     <form id="task-form">
       <div class="form-group">
         <input type="text" name="task-name" placeholder="Enter Task Name" />
@@ -31,24 +30,25 @@
         <button class="btn" id="save-task" type="submit">Add Task</button>
       </div>
     </form>
-
   </header>
 
   <main class="page-content" id="page-content">
+    <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-      <ul class="task-list" id="tasks-to-do">
-      </ul>
+      <ul class="task-list" id="tasks-to-do"></ul>
     </section>
-  <!-- Tasks In Progress -->
+
+    <!-- Tasks In Progress -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks In Progress</h2>
       <ul class="task-list" id="tasks-in-progress"></ul>
     </section>
-<!-- Tasks Completed -->
+
+    <!-- Tasks Completed -->
     <section class="task-list-wrapper">
-     <h2 class="list-title">Tasks Completed</h2>
-    <ul class="task-list" id="tasks-completed"></ul>
+      <h2 class="list-title">Tasks Completed</h2>
+      <ul class="task-list" id="tasks-completed"></ul>
     </section>
   </main>
 
@@ -58,4 +58,5 @@
 
   <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
